--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway</title>
-    <link rel="stylesheet" href="./resources/css/style.css">
+    <link rel="stylesheet" href="resources/css/style.css">
   </head>
   <body>
     <div class="header">
       <h1>Broadway Design</h1>
       <nav>
         <li><a href="#">Home</a></li>
-        <li><a href="#">Process</a></li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">Team</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#process">Process</a></li>
+        <li><a href="#work">Work</a></li>
+        <li><a href="#team">Team</a></li>
+        <li><a href="#contact">Contact</a></li>
       </nav>
     </div>
     <div class="upperContent">
@@ -28,25 +28,27 @@
       <h3>Identify</h3>
       <p>We put everything we have into our work.</p>
     </div>
+    <div class="midContent">
+      <h2 id="mid">Designed in New York</h2>
+    </div>
     <div class="lowerContent">
-      <h3 id="mid">Designed in New York</h3>
       <h3>Portfolio</h3>
       <p>Coming Soon</p>
       <h3>Team</h3>
       <p>We're Hiring</p>
       <h3>Contact</h3>
-      <p></p>
-      <p></p>
-      <p></p>
+      <p>Phone: (555)-555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
     </div>
     <div class="footer">
       <p>&copy; Broadway 2016</p>
       <nav>
-        <li><a href="">Home</a></li>
-        <li><a href="#">Process</a></li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">Team</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#process">Process</a></li>
+        <li><a href="#work">Work</a></li>
+        <li><a href="#team">Team</a></li>
+        <li><a href="#contact">Contact</a></li>
       </nav>
     </div>
   </body>
